Mise a jour de la classe MouvementCaisses