@@ -4,13 +4,17 @@ import cmr.notep.dao.DistributeursEntity;
 import cmr.notep.dao.DaoAccessorService;
 import cmr.notep.dao.PersonnesMoralesEntity;
 import cmr.notep.modele.Distributeurs;
+import cmr.notep.modele.MacroPersonnes;
+import cmr.notep.modele.Personnes;
 import cmr.notep.modele.PersonnesMorale;
 import cmr.notep.repository.DistributeursRepository;
 import cmr.notep.repository.PersonneMoraleRepository;
+import cmr.notep.repository.PersonnesRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -42,15 +46,16 @@ public class DistributeursBusiness {
     }
 
     public List<Distributeurs> avoirToutDistributeurs() {
-        return daoAccessorService.getRepository(DistributeursRepository.class).findAll()
-                .stream().map(cat ->dozerMapperBean.map(cat, Distributeurs.class))
-                .collect(Collectors.toList());
+
+        return daoAccessorService.getRepository(DistributeursRepository.class).findAllDistributeurs()
+                .stream().map(distibuteur ->dozerMapperBean.map(distibuteur, Distributeurs.class))
+                .toList();
     }
 
     public void supprimerDistributeur(Distributeurs Distributeurs)
     {
-        daoAccessorService.getRepository(DistributeursRepository.class)
-                .deleteById(Distributeurs.getId().toString());
+//        daoAccessorService.getRepository(DistributeursRepository.class)
+//                .deleteById(Distributeurs.getId().toString());
     }
 
     public Distributeurs posterDistributeur(Distributeurs Distributeurs) {
